2_db_anuncios.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db-ejer3-app
    labels:
        creator: albertoalvarezgarcia
  
  
spec:
  selector:
    matchLabels:
      app: db-ejer3-app
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: db-ejer3-app
    spec:
      containers:
      - name: db-ejer3-app
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: mysql-storage
      volumes:
          - name: mysql-storage
            persistentVolumeClaim:
                claimName: pvc-3g
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db-ejer3-app
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: db-ejer3-app-port
  selector:
    app: db-ejer3-app
  type: ClusterIP
